# hpc-challenge

./: CMakeLists.txt  README  README.md  launch.sh  launch2.sh  mpi_test.sh  mpi_test_20000_10.sh  mpi_test_40000.sh  mpi_test_5.sh  mpi_test_50000.sh  mpi_test_70000.sh  mpi_test_extensive_100.sh  mpi_test_extensive_13.sh  mpi_test_extensive_25.sh  mpi_test_extensive_50.sh  multi_fpga_launch.sh  multi_fpga_node.sh  rhs_generator.cpp  test_openmp.sh
include/: utils.h
include/CL/: cl.h
src/: conjugate_gradient.cpp  main.cpp  main.cu  matrix_generator.cpp  nccl_test.cu  templated_cuda.cu
src/cpu/: AcceleratorNode.h  MainNode.h  main_mpi.cpp
src/fpga/: kernels.cl  main_fpga.cpp  matrix_vector_kernel.cl  multi_fpga.cpp  multi_node.cpp  single_fpga.cpp  vector_sum_test_kernel.cl
src/heterogeneous/: AcceleratorNode.cpp  AcceleratorNode.h  CPUMatrixVectorMultiplier.h  FPGAMatrixVectorMultiplier.cpp  FPGAMatrixVectorMultiplier.h  FpgaAcceleratorNode.cpp  FpgaAcceleratorNode.h  FpgaMainNode.cpp  FpgaMainNode.h  MainNode.cpp  MainNode.h  MatrixVectorMultiplier.h  TestCpuAcceleratorNode.cpp  TestCpuAcceleratorNode.h  main.cpp  main_cuda.cu  main_mpi.cpp  utils.cpp  utils.h
